@@ -46,6 +46,8 @@ public:
 		       DownloadEngine* e);
 protected:
   virtual bool executeInternal();
+
+  virtual bool prepareForRetry(time_t wait);
 };
 
 } // namespace aria2
